{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 35,
  "lineage": "1d619dd0-21cd-02a1-a81c-f991f58f711e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:internet-gateway/igw-0e5431ce06e710840",
            "id": "igw-0e5431ce06e710840",
            "owner_id": "118320467932",
            "tags": {
              "Name": "tracklearn-igw"
            },
            "tags_all": {
              "Name": "tracklearn-igw"
            },
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:route-table/rtb-073bf1530ee019526",
            "id": "rtb-073bf1530ee019526",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-private01"
            },
            "tags_all": {
              "Name": "sample-rt-private01"
            },
            "timeouts": null,
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-private02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:route-table/rtb-076c1cefd7321fcff",
            "id": "rtb-076c1cefd7321fcff",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "sample-rt-private02"
            },
            "tags_all": {
              "Name": "sample-rt-private02"
            },
            "timeouts": null,
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "sample-rt-public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:route-table/rtb-062b8a1108d676ad4",
            "id": "rtb-062b8a1108d676ad4",
            "owner_id": "118320467932",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5431ce06e710840",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "sample-rt-public"
            },
            "tags_all": {
              "Name": "sample-rt-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04f5231fe80a7dc10",
            "route_table_id": "rtb-062b8a1108d676ad4",
            "subnet_id": "subnet-024fd04331cbbef0e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.sample-rt-public",
            "aws_subnet.public_1a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c859b3f2535a6977",
            "route_table_id": "rtb-062b8a1108d676ad4",
            "subnet_id": "subnet-0b4ae783eb08836bb"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.sample-rt-public",
            "aws_subnet.public_1b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:security-group/sg-0b275a01013ade498",
            "description": "Security Group for EC2 and RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b275a01013ade498",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8081,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8081
              }
            ],
            "name": "tracklearn-sg",
            "name_prefix": "",
            "owner_id": "118320467932",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "tracklearn-sg"
            },
            "tags_all": {
              "Name": "tracklearn-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:subnet/subnet-024fd04331cbbef0e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1a",
            "availability_zone_id": "cac1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-024fd04331cbbef0e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tracklearn-subnet-1a"
            },
            "tags_all": {
              "Name": "tracklearn-subnet-1a"
            },
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:subnet/subnet-0b4ae783eb08836bb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ca-central-1b",
            "availability_zone_id": "cac1-az2",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b4ae783eb08836bb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "118320467932",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "tracklearn-subnet-1b"
            },
            "tags_all": {
              "Name": "tracklearn-subnet-1b"
            },
            "vpc_id": "vpc-042bbb52fded09bdb"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ca-central-1:118320467932:vpc/vpc-042bbb52fded09bdb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06a86d0fd449852d3",
            "default_route_table_id": "rtb-0dd774e43a72af310",
            "default_security_group_id": "sg-0fbd28279cb9aeb20",
            "dhcp_options_id": "dopt-0a499fdcf672ddd19",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-042bbb52fded09bdb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dd774e43a72af310",
            "owner_id": "118320467932",
            "tags": {
              "Name": "tracklearn-vpc"
            },
            "tags_all": {
              "Name": "tracklearn-vpc"
            }
          }
        }
      ]
    }
  ]
}